--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+a {
+  padding-left: 80px;
+  padding-right: 80px;
+}
+
 .App {
   text-align: left;
 }
@@ -19,7 +24,7 @@
 }
 
 input[type=number]{
-    width: 80px;
+    width: 100px;
 }
 
 
@@ -45,6 +50,9 @@ body {
   background-size:cover
 }
 
+Navbar {
+  padding-left: 80px;
+}
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
