--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ input[type="textarea"] {
 }
 
 body {
-  background: url("http://hdwallpaperbackgrounds.net/wp-content/uploads/2015/10/Hd-Bamboo-Forest-Wallpapers-Desktop-Computer.jpg");
+  background: url("http://www.lifegreensystems.com/wp-content/uploads/2014/05/3738399002_acf53d34fb_o.jpg");
   background-attachment: fixed;
   background-size:cover
 }
@@ -65,6 +65,20 @@ body {
   margin-bottom: 30px;
   border-radius: 10px;
 
+}
+
+#compareWrap1{
+  background-color:rgba(46, 204, 113,0.7);
+  border: 5px solid rgba(46, 204, 113,0.7);
+  border-radius: 10px;
+  padding: 20px;
+}
+
+#compareWrap2{
+  background-color:rgba(142, 68, 173,0.7);
+  border: 5px solid rgba(142, 68, 173,0.7);
+  border-radius: 10px;
+  padding: 20px;
 }
 
 #yellow {
@@ -86,4 +100,12 @@ body {
   border: 5px solid rgba(231, 76, 60,1.0);
   border-radius: 10px;
   padding: 5px;
+}
+
+ul.select-dropdown,ul.dropdown-content{
+    width:200%;
+}
+
+ul.dropdown-content.select-dropdown li span {
+    color: rgba(46, 204, 113,1.0);
 }
