--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,12 @@ body {
   padding: 5px;
 }
 
+#login {
+  background-color: white;
+  border-radius: 10px;
+  padding: 20px;
+}
+
 ul.select-dropdown,ul.dropdown-content{
     width:200%;
 }
